# Clyde-v1

./: .env.example  .gitignore  README.md  conftest.py  pyproject.toml
.kiro/hooks/: post-task-alignment.kiro.hook  readme-on-create.kiro.hook  readme-on-edit.kiro.hook
.kiro/specs/: .config.kiro
.kiro/steering/: product.md  structure.md  tech.md
clyde/: __init__.py  pipeline.py
clyde/llm/: __init__.py  cerebras.py  client.py  demo_router.py  factory.py  http_client.py  mock.py  openrouter.py
clyde/models/: __init__.py  actors.py  causal.py  config.py  enums.py  input.py  metrics.py  networks.py  reporting.py  scenario.py  time.py
clyde/persistence/: __init__.py  db.py
clyde/reporting/: __init__.py  agent.py
docs/: diagram.md
examples/: run_pipeline.py
terraform/: .gitignore  README.md  cloud-init.yaml.tftpl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: test_analog_matcher.py  test_backtest.py  test_causal_chain_roundtrip.py  test_gods_eye.py  test_ingestion.py  test_knowledge_graph.py  test_llm_boundary.py  test_llm_mock.py  test_monte_carlo_properties.py  test_monte_carlo_unit.py  test_network_topology.py  test_persistence.py  test_pipeline_e2e.py  test_pipeline_phase_boundary.py  test_prior_library_citability.py  test_propagation_properties.py  test_propagation_unit.py  test_report_agent_property.py  test_report_agent_unit.py  test_scenario_parser_property.py  test_scenario_parser_unit.py  test_scenario_pretty_print.py  test_scenario_roundtrip.py  test_synthesis_properties.py  test_web_api.py  test_world_factory_properties.py
(+35 files in other folders)
