[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "clyde"
version = "0.1.0"
description = "Clyde: situation-agnostic economic simulator"
requires-python = ">=3.11"
dependencies = [
    "pypdf>=6",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "hypothesis>=6",
]
all = ["clyde[web,dev]"]

[project.scripts]
clyde-web = "clyde.web.__main__:main"

[tool.setuptools.packages.find]
include = ["clyde*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "property: property-based tests (Hypothesis)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
